--- a/data/level/Forest/shady-shortcut.cfg
+++ b/data/level/Forest/shady-shortcut.cfg
@@ -147,11 +147,12 @@
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
-			"label": "_27ff",
+			"label": "moribund_muck_exit",
 			"property_data": {
-				"_dest_door": "moribund-muck.cfg"
+				"_dest_door": "shady_shortcut_exit",
+				"_dest_level": "moribund-muck.cfg"
 			},
-			"type": "forest_cave_side_doorway",
+			"type": "cave_side_doorway_interior",
 			"x": -2656,
 			"y": 704
 		},
@@ -616,7 +617,37 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "waterfall_behind"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_background_behind_trees"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
@@ -858,9 +889,9 @@
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,,crk,crk,crk,crk,crk,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,,crk,crk,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
@@ -1111,6 +1142,46 @@ fbr,
 			"zorder": "player"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_foreground"
+		},
+		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,msh,msh,msh
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,msh,msh
 msh,msh,msh
@@ -1334,6 +1405,16 @@ msh,msh,msh
 			"y": -6112,
 			"y_speed": 100,
 			"zorder": "mushrooms_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Shady Shortcut",
