Fixed up the shortcut level's connection to the main map.

--- a/data/level/General/main-map.cfg
+++ b/data/level/General/main-map.cfg
@@ -158,10 +158,7 @@
 	},
 	"tile_map": [
 		{
-			"tiles": ",,,,,,,,,,,nbr,nbr,nbr,nbr
-,,,,,,,,,,,nbr,nbr,nbr,nbr
-,,,,,,,,,,,nbr,nbr,nbr,nbr
-,,,,,,,,,,,nbr,nbr,nbr,nbr
+			"tiles": ",
 ,
 ,
 ,
