--- a/data/objects/playable/map_selector.cfg
+++ b/data/objects/playable/map_selector.cfg
@@ -19,6 +19,7 @@ properties: {
 					{ x:490, y:350, level_filename:'foreboding-forest.cfg',					level_prettyname:~Foreboding Forest~		},
 					{ x:520, y:295, level_filename:'musty-mine.cfg',						level_prettyname:~Musty Mine~				},
 					{ x:465, y:315, level_filename:'rustic-route.cfg',						level_prettyname:~Rustic Route~				},
+					{ x:476, y:256, level_filename:'shady-shortcut.cfg',					level_prettyname:~Shady Shortcut~			},
 					{ x:380, y:305, level_filename:'ravenish-ravine.cfg',					level_prettyname:~Ravenish Ravine~			},
 					{ x:410, y:285, level_filename:'bon-bosque.cfg',						level_prettyname:~Bon Bosque~				},
 					{ x:330, y:245, level_filename:'watery-alley.cfg',						level_prettyname:~Watery Alley~				},
