Added a couple save points before/after the secret shortcut level.

--- a/data/level/Forest/gloomy-glade.cfg
+++ b/data/level/Forest/gloomy-glade.cfg
@@ -1979,6 +1979,21 @@
 			"type": "invisible_level_portal",
 			"x": 4736,
 			"y": 1792
+		},
+		{
+			"_uuid": "c0080eb2506f4e239bb964b1667409de",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7d8d85c0",
+			"property_data": {
+				"_x2_bound": 5074,
+				"_x_bound": 4974,
+				"_y2_bound": 1525,
+				"_y_bound": 1225
+			},
+			"type": "save_statue",
+			"x": 4994,
+			"y": 1395
 		}
 	],
 	"dimensions": [0,-832,5536,2079],
