Added some missing palette tags.

--- a/data/objects/props-interactive/misc/lever_wooden.cfg
+++ b/data/objects/props-interactive/misc/lever_wooden.cfg
@@ -9,6 +9,7 @@ animation: [
 		rect: [0,177,31,209],
 		body_area: "all",
 		duration: 1000000,
+		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	},
 	{
 		id: "pushed",
@@ -16,6 +17,7 @@ animation: [
 		rect: [32,177,63,209],
 		body_area: "all",
 		duration: 1000000,
+		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	},
 ],
 }
