--- a/data/objects/props-interactive/obstacles/fungus_bracket_springy.cfg
+++ b/data/objects/props-interactive/obstacles/fungus_bracket_springy.cfg
@@ -65,7 +65,7 @@ animation: [
 		image: "props/fungus-bracket-springy.png",
 		rect: [0,0,79,31],
 		duration: 200,
-		palettes: "@include data/palettes.cfg:forest_palettes",
+		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	},
 ],
 }
