--- a/data/objects/props-interactive/platforms/floating_mushroom_platform.cfg
+++ b/data/objects/props-interactive/platforms/floating_mushroom_platform.cfg
@@ -55,5 +55,6 @@
 		reverse: true,
 		duration: 4,
 		no_remove_alpha_borders: true,
+		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	}],
 }
