Fixed an issue where the bombs wouldn't trigger switches.

--- a/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
@@ -157,7 +157,7 @@ properties: {
 
 
 on_collide_object_body: "(
-	if(collide_with.team = 'player' and (arg.collide_with_area in ['grab', 'attack', 'thrown']), [
+	if((collide_with.team = 'player' or collide_with.team = 'neutral') and (arg.collide_with_area in ['grab', 'attack', 'thrown']), [
 		swallow_event(), 
 		get_hit_by(collide_with),
 	]) where collide_with = get_hittable_root_object(arg.collide_with)
