Wired in the new bomber-mushroom tutorial level into the level series.

--- a/data/level/Forest/consternatious-conundrum.cfg
+++ b/data/level/Forest/consternatious-conundrum.cfg
@@ -293,9 +293,36 @@
 			"type": "sound_source_area",
 			"x": -1004,
 			"y": -972
+		},
+		{
+			"_uuid": "54f65c3dcc374fe3b71e573fac472cad",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "moribund_muck_exit",
+			"property_data": {
+				"_dest_door": "consternatious_conundrum_exit",
+				"_dest_level": "moribund-muck.cfg"
+			},
+			"type": "forest_cave_side_doorway",
+			"x": -1376,
+			"y": -1024
+		},
+		{
+			"_uuid": "97c555d5d5b84d8fb4e911a331bb02a4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "murky_mire_exit",
+			"property_data": {
+				"_dest_door": "consternatious_conundrum_exit",
+				"_dest_level": "murky-mire.cfg"
+			},
+			"type": "forest_cave_side_doorway",
+			"x": 1376,
+			"y": -1184
 		}
 	],
-	"dimensions": [-1248,-2016,1471,-193],
+	"dimensions": [-1344,-2016,1567,-193],
 	"id": "consternatious-conundrum.cfg",
 	"music": "DangerSwamp.ogg",
 	"palettes": ["forest_decay"],
@@ -411,7 +438,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg
@@ -446,16 +473,16 @@
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,frg,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,,,,,,,,,,,frg,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,frg,frg,frg,,,frg,frg,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,,,,,,,,,,,frg,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -577,7 +604,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": "",
