--- a/data/level/Forest/moribund-muck.cfg
+++ b/data/level/Forest/moribund-muck.cfg
@@ -309,10 +309,10 @@
 			"_uuid": "a2a9e4fc9af24c659197cbcf0efb3481",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "mire_exit",
+			"label": "consternatious_conundrum_exit",
 			"property_data": {
-				"_dest_door": "muck_exit",
-				"_dest_level": "murky-mire.cfg"
+				"_dest_door": "moribund_muck_exit",
+				"_dest_level": "consternatious-conundrum.cfg"
 			},
 			"type": "forest_cave_side_doorway",
 			"x": 10176,
