--- a/data/level/Forest/murky-mire.cfg
+++ b/data/level/Forest/murky-mire.cfg
@@ -58,10 +58,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
-			"label": "muck_exit",
+			"label": "consternatious_conundrum_exit",
 			"property_data": {
-				"_dest_door": "mire_exit",
-				"_dest_level": "moribund-muck.cfg"
+				"_dest_door": "murky_mire_exit",
+				"_dest_level": "consternatious-conundrum.cfg"
 			},
 			"type": "forest_cave_side_doorway",
 			"x": -4384,
