Set up a falloff helper function for the new sound api, so we can rapidly switch over existing instances to using the new one.

--- a/data/object_prototypes/base/standard_values.cfg
+++ b/data/object_prototypes/base/standard_values.cfg
@@ -113,11 +113,52 @@ properties: {
 	attempt_animation: "def(string anim_name, string fallback_anim) -> commands execute(me, if(anim_name in available_animations, set(animation, anim_name), set(animation, fallback_anim)))",
 
 #-------------------------- sound functions --------------------------#
-	sound_falloff: "def(string sound_name, int falloff_dist=200, int|decimal max_volume=1.0)  -> commands ((sound(sound_name, volume, fade_in_time, stereo_pan)
+	sound_falloff: "def(string sound_name, int falloff_dist=200, int|decimal max_volume=1.0)  -> commands
+				((sound(sound_name, volume, fade_in_time, stereo_pan)
 						where fade_in_time = 0.0,
 						where stereo_pan = [lib.math.constrain(volume, falloff_dist/dist_to_player(-ear_radius), 1.0),lib.math.constrain(0, falloff_dist/dist_to_player(ear_radius), 1.0)]
 					) where volume = lib.math.constrain(0, decimal(falloff_dist)/dist_to_player(0), max_volume)
-				) where dist_to_player = def(decimal x_offset) -> decimal lib.math.length(self.mid_x, self.mid_y, level.player.mid_x + x_offset, level.player.mid_y), where ear_radius = 250",	
+				) where dist_to_player = def(decimal x_offset) -> decimal lib.math.length(self.mid_x, self.mid_y, level.player.mid_x + x_offset, level.player.mid_y), where ear_radius = 250",
+	
+	/*
+		lib.sound.play_sound() has a third, optional argument, of the type SoundInfo:
+        SoundInfo: "{
+                layer: null|string,
+                volume: null|decimal,
+                delay: null|decimal,
+                embargo: null|decimal,
+                volume_variation: null|[decimal,decimal],
+                pitch_variation: null|[decimal,decimal],
+
+                loop: null|bool,
+                loop_point: null|decimal,
+                loop_from: null|decimal,
+                pan: null|[decimal,decimal],
+        }",
+        
+        sound_falloff is our legacy sound function;  play_sound__falloff is the new one.  Nothing's "wrong" with the old one, the main draw of the new one is offering exotic new features, like time-differentiated stereo panning (rather than just making one ear's sound softer than the other - this has a very profound impact on stereo audio perception).
+	*/
+	
+	play_sound__falloff: "def(string sound_name, {
+					falloff_dist: null|int,
+					max_volume: null|decimal
+				} custom_settings={}) -> commands
+
+				(
+					(
+						lib.sound.play_sound(me, sound_name, {
+							volume: volume,
+							pan: stereo_pan,
+						})
+							where stereo_pan = [lib.math.constrain(volume, falloff_dist/dist_to_player(-ear_radius), 1.0),lib.math.constrain(0, falloff_dist/dist_to_player(ear_radius), 1.0)]
+					) where volume = lib.math.constrain(0, decimal(falloff_dist)/dist_to_player(0), max_volume)
+				) 
+					where dist_to_player = def(decimal x_offset) -> decimal lib.math.length(self.mid_x, self.mid_y, level.player.mid_x + x_offset, level.player.mid_y),
+					where ear_radius = 250,
+					where falloff_dist = if(custom_settings.falloff_dist != null, custom_settings.falloff_dist, 200)
+					where max_volume = if(custom_settings.max_volume != null, custom_settings.max_volume, 1.0)",	
+	
+	
 	
 	sound_attenuated_by_speed: "def(string sound_file, decimal max_speed=1200.0) -> commands
 										//the max_speed is baked-in here, but it's fairly well-tuned for the stuff this function gets used on (dropping chunks of stuff)
