--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3941,21 +3941,21 @@ object_type: [
 			
 
 			terrain_response_head: "commands :: [
-					lib.sound.play_sound(me, 'fireball-bounce'),
+					play_sound__falloff('fireball-bounce', {max_volume: 0.8}),
 					set(velocity_x, speed * (vel_xy_after_reflection.x)),
 					set(velocity_y, speed * (vel_xy_after_reflection.y)),
 					increment_termination_counter,
 				]",
 		
 			terrain_response_side: "commands :: [
-					lib.sound.play_sound(me, 'fireball-bounce'),
+					play_sound__falloff('fireball-bounce', {max_volume: 0.8}),
 					set(velocity_x, speed * (vel_xy_after_reflection.x)),
 					set(velocity_y, speed * (vel_xy_after_reflection.y)),
 					increment_termination_counter,
 				]",
 			
 			terrain_response_feet: "commands :: [
-					lib.sound.play_sound(me, 'fireball-bounce'),
+					play_sound__falloff('fireball-bounce', {max_volume: 0.8}),
 					set(velocity_x, speed * (vel_xy_after_reflection.x)),
 					set(velocity_y, speed * (vel_xy_after_reflection.y)),
 					increment_termination_counter,
