I NOW TAKE FROM YOU YOUR POWER

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -301,6 +301,7 @@ properties: {
 	choppa: "set(_jump_cheat,true)",
 	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
 	supes: "[hax,choppa,set(invincible,-1)]",
+	thor1: "[set(_jump_cheat,false),set(invincible,0)]",
 	lucre: "[
 				acquire_gold(20000),
 				map(all_trophy_items, add_item(value.id, 1)),
